--- a/style.css
+++ b/style.css
@@ -1,79 +1,187 @@
 body {
-    
-	text-align: center;
-	margin: 0px;
+    background-color: lightskyblue;
+    background-image: url('img/blue.jpg');
+    background-attachment: fixed;
+    /*background-color: gray;*/
+    color: black;
+    font-size: 87.5%;
+    font-family: Arial, 'Lucida Sans Unicode';
+    text-align: left;
+}
 
-#header {
-    margin-top: 0px;
-	margin-bottom: 0px;
-}
-#content {
-    margin-top: 0px;
-	margin-bottom: 0px;
-}
-#footer {
-    clear: both;
-    background-color: #336699;
-    height: 35px;
-    color: white;
-}
 .logo {
-    height: 60px;
-    wei
-    background-color: white;
-    padding-bottom: 12px;
-    color: orangered;
-    margin-bottom: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 35px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: white;
+    margin-left: 0px;
+    padding-top: 20px;
+    padding-left: 20px;
+    text-align: left;
+    letter-spacing: -2px;
+    width: 100%;
 }
-.mainheader nav {
+
+.punchline {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+    color:#C69C6D;
+    padding-left: 20px;
+    padding-top: -5px;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:link, a:visited {
+   color: #FF8C00;
+}
+
+a:hover, a:active {
+    background-color: #FF8C00;
+    color: #fff;
+}
+
+.body {
+   margin: 0 auto;
+   width: 70%;
+   clear: both;
+}
+
+.mainHeader img {
+    width: 100%;
+    height: auto;
+    margin-top: 2%;
+    margin-bottom: 0px;
+}
+
+.mainHeader nav {
     background-color: #2f4f4f;
     height: 40px;
     border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
-    
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
-#nav {
-    height: 40px;
-    width: 780px;
-    background-color: orangered;
-    color: white;
-    margin-bottom: 5px;
+
+.mainHeader nav ul {
+    list-style: none;
+    margin: 0 auto;
 }
-#categories {
-    height: 100px;
-    width: 280px;
-    background-color: white;
-    color: black;
-    float: right;
-}
-#topContent {
-    width: 495px;
-    height: 200px;
+
+.mainHeader nav ul li {
     float: left;
-    color: orangered;
-    background-color: white;
-    margin-bottom: 5px;
+    display: inline;
 }
-#bottomContent {
-    width: 495px;
-    height: 210px;
+
+.mainHeader nav a:link, .mainHeader nav a:visited {
+    color: #fff;
+    display: inline-block;
+    padding: 10px 25px;
+    height: 20px;
+}
+
+.mainHeader nav a:hover, .mainHeader nav a:active,
+.mainHeader nav .active a:link, .mainHeader nav .active a.visited {
+    background-color: #ff8c00;
+    text-shadow: none;
+}
+
+.mainHeader nav ul li a {
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+}
+
+.mainContent {
+    line-height: 23px;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+}
+
+.content {
+    width: 70%;
     float: left;
-    color: orangered;
-    background-color: white;
-    margin-bottom: 5px;
 }
-#sidebar {
-     height: 100px;
-    width: 280px;
-    background-color: white;
-    color: black;
-    float: right;
+
+.topcontent {
+    background-color: #fff;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    padding: 3% 5%;
+    /*margin-top: 2%;*/
 }
-#sidebar {
-     height: 100px;
-    width: 280px;
-    background-color: white;
-    color: black;
-    float: right;
+
+.bottomcontent {
+    background-color: #fff;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    padding: 3% 5%;
+    margin-top: 2%;
+}
+
+.top-sidebar {
+    width: 23%;
+    float: left;
+    background-color: #fff;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    margin: 0 0 1% 1%;
+    padding: 2% 3%;
+}
+
+.post-info {
+    font-style: italic;
+    color: #999;
+    font-size: 90%;
+}
+
+.middle-sidebar {
+    width: 23%;
+    float: left;
+    background-color:  #fff;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    margin-left: 1%;
+    margin-bottom: 1%;
+    padding: 2% 3%;
+}
+
+.bottom-sidebar {
+    width: 23%;
+    float: left;
+    background-color:  #fff;
+    border-radius: 5px;
+     -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    margin-left: 1%;
+    margin-bottom: 1%;
+    padding: 1.6% 3%;
+}
+
+.mainFooter {
+    width: 100%;
+    height: 50px;
+    float: left;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    background-color: #2f4f4f;
+    margin-top: 0;
+    margin-bottom: 2%;
+}
+
+.mainFooter p {
+    width: 92%;
+    margin: 10px auto;
+    color: #fff;
 }
