--- a/style.css
+++ b/style.css
@@ -185,3 +185,19 @@ a:hover, a:active {
     margin: 10px auto;
     color: #fff;
 }
+
+/*CSS FOR THE ABOUT PAGE*/
+
+.aboutcontent {
+    
+    
+    
+    width: 98%;
+    float: left;
+    background-color: #FFF;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    padding: 1% 1%;
+    margin-bottom: 1%;
+}
