--- a/style.css
+++ b/style.css
@@ -1,21 +1,24 @@
 body {
-    background-color: lightskyblue;
-    background-image: url('img/blue.jpg');
-    background-attachment: fixed;
-    /*background-color: gray;*/
-    color: black;
-    font-size: 87.5%;
+    margin: 0px;
+    padding: 0px;
+    background-color:blue;
+    /*background-image: url('img/blue.jpg');
+    background-attachment: fixed;*/
+    color: #000305;
+    font-size:87.5%;
     font-family: Arial, 'Lucida Sans Unicode';
-    text-align: left;
+    text-align:left;
 }
+
+
 
 .logo {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 35px;
+    font-size:35px;
     text-transform: uppercase;
     font-weight: bold;
     color: white;
-    margin-left: 0px;
+    margin-left:0;
     padding-top: 20px;
     padding-left: 20px;
     text-align: left;
@@ -27,7 +30,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     font-weight: bold;
-    color:#C69C6D;
+    color: #c69c6d;
     padding-left: 20px;
     padding-top: -5px;
 }
@@ -37,102 +40,102 @@ a {
 }
 
 a:link, a:visited {
-   color: #FF8C00;
+    color: #ff8c00;
 }
 
 a:hover, a:active {
-    background-color: #FF8C00;
-    color: #fff;
+    background-color: #ff8c00;
+    color: #ffffff;
 }
 
 .body {
-   margin: 0 auto;
-   width: 70%;
-   clear: both;
+    margin: 0 auto;
+    width: 70%;
+    clear:both;
 }
 
-.mainHeader img {
-    width: 100%;
+.mainHeader img{
+    width:100%;
     height: auto;
     margin-top: 2%;
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
 
-.mainHeader nav {
+.mainHeader nav{
     background-color: #2f4f4f;
     height: 40px;
     border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
-    margin-bottom: 0px;
-    margin-top: 0px;
+    margin-bottom: 0;
+    margin-top:0;
 }
 
-.mainHeader nav ul {
+.mainHeader nav ul{
     list-style: none;
     margin: 0 auto;
 }
 
-.mainHeader nav ul li {
+.mainHeader nav ul li{
     float: left;
     display: inline;
 }
 
-.mainHeader nav a:link, .mainHeader nav a:visited {
-    color: #fff;
-    display: inline-block;
+.mainHeader nav a:link, .mainHeader nav a:visited{
+    color:#fff;
+    display:inline-block;
     padding: 10px 25px;
     height: 20px;
 }
 
 .mainHeader nav a:hover, .mainHeader nav a:active,
-.mainHeader nav .active a:link, .mainHeader nav .active a.visited {
-    background-color: #ff8c00;
-    text-shadow: none;
+.mainHeader nav .active a:link, .mainHeader nav.active a.visited{
+    background-color: #FF8C00;
+    text-shadow:none;
 }
 
-.mainHeader nav ul li a {
-    border-radius: 5px;
+.mainHeader nav ul li a{
+    border-radius:5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
-}
-
-.mainContent {
-    line-height: 23px;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-}
-
+}       
+ 
+.mainContent{
+        line-height:25px;
+        border-radius:5px;
+        -moz-border-radius:5px;
+        -webkit-border-radius: 5px;
+}       
+    
 .content {
-    width: 70%;
-    float: left;
+        width:70%;
+        float:left;
 }
-
-.topcontent {
-    background-color: #fff;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    padding: 3% 5%;
-    /*margin-top: 2%;*/
-}
-
+    
+.topcontent{
+        background-color: #fff;
+        border-radius:5px;
+        -moz-border-radius: 5px;
+        -webkit-border-radius: 5px;
+        padding: 3% 5%;
+        /*margin-top: 2%;*/
+}   
+    
 .bottomcontent {
     background-color: #fff;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
+    border-radius:5px;
+    -moz-border-radius:5px;
     -webkit-border-radius: 5px;
     padding: 3% 5%;
     margin-top: 2%;
-}
+}    
 
 .top-sidebar {
     width: 23%;
-    float: left;
+    float:left;
     background-color: #fff;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
+    border-radius:5px;
+    -moz-border-radius:5px;
     -webkit-border-radius: 5px;
     margin: 0 0 1% 1%;
     padding: 2% 3%;
@@ -146,58 +149,55 @@ a:hover, a:active {
 
 .middle-sidebar {
     width: 23%;
-    float: left;
-    background-color:  #fff;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
+    float:left;
+    background-color: white;
+    border-radius:5px;
+    -moz-border-radius:5px;
+    -webkit-border-radius: 5px;
+    margin-left: 1%;
+    margin-bottom: 1%;
+    padding: 2% 3%;     
+}
+
+.bottom-sidebar {
+    width: 23%;
+    float:left;
+    background-color: white;
+    border-radius:5px;
+    -moz-border-radius:5px;
     -webkit-border-radius: 5px;
     margin-left: 1%;
     margin-bottom: 1%;
     padding: 2% 3%;
 }
 
-.bottom-sidebar {
-    width: 23%;
-    float: left;
-    background-color:  #fff;
-    border-radius: 5px;
-     -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    margin-left: 1%;
-    margin-bottom: 1%;
-    padding: 1.6% 3%;
-}
-
 .mainFooter {
+    height: 50px; 
     width: 100%;
-    height: 50px;
-    float: left;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
     background-color: #2f4f4f;
+    float: left;
+    border-radius:5px;
+    -moz-border-radius:5px;
+    -webkit-border-radius: 5px;
     margin-top: 0;
     margin-bottom: 2%;
 }
 
-.mainFooter p {
+.mainFooter p{
     width: 92%;
     margin: 10px auto;
     color: #fff;
 }
 
 /*CSS FOR THE ABOUT PAGE*/
-
 .aboutcontent {
-    
-    
-    
     width: 98%;
-    float: left;
-    background-color: #FFF;
+    float:left;
+    background-color: #fff;
     border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     padding: 1% 1%;
     margin-bottom: 1%;
+    
 }
